# GenAIRR

./: .gitignore  .readthedocs.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  MIGRATING.md  Makefile  README.md  Sandbox.py  concept-airr-record.html  concept-contracts.html  concept-live-call.html  concept-persistent-ir.html  concept-pipeline.html  concepts.html  debug.py  demo.html  doc_requirements.txt  guide-audit-realism.html  guide-benchmark-aligner.html  guide-build-config.html  guide-clonal-families.html  guide-compare-shm.html  guide-export.html  guide-productive.html  guide-replay.html  guide-reproduce.html  guide-smoke-test.html  guide-streaming.html  guide-trace-introspection.html  guide-tune-corruption.html  guide-v-usage.html  guide-with-metadata.html  guides.html  index.html  learn.html  lesson-1.html  lesson-2.html  (+11 more)
engine_rs/: Cargo.toml  pyproject.toml
engine_rs/src/: address.rs  airr_record.rs  airr_record_tests.rs  assignment.rs  codon.rs  compiled.rs  compiled_tests.rs  contract.rs  dist.rs  dist_tests.rs  event.rs  feasibility.rs  feasibility_tests.rs  ir.rs  ir_tests.rs  junction.rs  lib.rs  live_call.rs  live_call_tests.rs  pass.rs  passes.rs  refdata.rs  replay.rs  rng.rs  s5f.rs  trace.rs  trace_file.rs
engine_rs/src/airr_record/: builder.rs  junction.rs  locus.rs  mod.rs  projection.rs  record.rs  segment_projection.rs  sequence.rs  trace_fields.rs  validate.rs  walk.rs
engine_rs/src/airr_record/tests/: anchors.rs  mod.rs  projection.rs  utilities.rs
engine_rs/src/airr_record/walk/: helpers.rs  mod.rs  types.rs
engine_rs/src/compiled/: analyze.rs  error.rs  execute.rs  feasibility_builder.rs  mod.rs  report.rs
engine_rs/src/compiled/tests/: compile_runtime.rs  curated.rs  d_extensions.rs  indels.rs  j_extensions.rs  live_call_edits.rs  mod.rs  overlaps.rs  v_extensions.rs
engine_rs/src/contract/: admissible_set.rs  admit_mask_observer.rs  anchor_preserved.rs  junction_stop_state.rs  mask_vs_admits_equivalence.rs  mod.rs  no_stop_codon_in_junction.rs  productive_junction_frame.rs  set.rs  test_support.rs
engine_rs/src/contract/anchor_preserved/: admission.rs  live.rs  retention.rs  support.rs
engine_rs/src/contract/anchor_preserved/tests/: mod.rs
engine_rs/src/contract/junction_stop_state/: build.rs  layout.rs  model.rs  query.rs
engine_rs/src/contract/junction_stop_state/tests/: mod.rs  np1_frames.rs  preconditions.rs  static_stops.rs  vdj.rs
engine_rs/src/contract/no_stop_codon_in_junction/: np_candidate.rs  support.rs  targeted.rs  verify.rs
engine_rs/src/contract/no_stop_codon_in_junction/tests/: admits_fixed.rs  mod.rs  np_candidates.rs  targeted.rs  verify.rs
engine_rs/src/feasibility/tests/: addresses.rs  anchors.rs  mod.rs  productive_length.rs
engine_rs/src/genotype/: mod.rs
engine_rs/src/ir/: builder.rs  codon_rail_observer.rs  coordinates.rs  event_log_observer.rs  handle.rs  nucleotide.rs  per_segment.rs  pool.rs  region.rs  segment.rs  sequence.rs  sim_event.rs  simulation.rs
engine_rs/src/ir/tests/: assignments.rs  basics.rs  codon_rail.rs  germline_pos.rs  indels.rs  mod.rs  persistent.rs  stress.rs
engine_rs/src/lineage/: affinity.rs  branching.rs  clone_size.rs  export.rs  family.rs  mod.rs  poisson.rs  sampling.rs  tree.rs
engine_rs/src/live_call/: bitset.rs  cache_parity.rs  call.rs  dirty_signal_observer.rs  mod.rs  model.rs  reference_index.rs  refresh_hook.rs  refresh_plan.rs  scoring.rs  walker.rs  walker_observer.rs
engine_rs/src/live_call/tests/: bitset.rs  caller.rs  mod.rs  reference_index.rs  scoring.rs  state.rs  walker_observer.rs  walker_observer_change_base.rs  walker_observer_from_existing_region.rs
engine_rs/src/live_call/walker/: extensions.rs  mod.rs
engine_rs/src/pass/: context.rs  error.rs  hook.rs  metadata.rs  outcome.rs  plan.rs  runtime.rs  schedule.rs  support.rs  tests.rs  traits.rs
engine_rs/src/pass/testing/: lockdown.rs  mod.rs  runtime.rs
engine_rs/src/passes/: assemble_segment.rs  constrained.rs  count_source.rs  echo.rs  generate_np.rs  invert_d.rs  mod.rs  mutation_transaction.rs  p_addition.rs  paired_end.rs  paramsig.rs  receptor_revision.rs  sample_allele.rs  sample_base.rs  sample_genotype.rs  sample_haplotype.rs  test_support.rs  trim.rs
engine_rs/src/passes/assemble_segment/: execution.rs
engine_rs/src/passes/corrupt/: contaminant.rs  end_loss.rs  indel.rs  mod.rs  ncorrupt.rs  pcr.rs  quality.rs  rev_comp.rs
engine_rs/src/passes/corrupt/indel/: event.rs  replay.rs  sampling.rs  tuple_sampler.rs
engine_rs/src/passes/generate_np/: execution.rs  np_base_generator.rs  sampling.rs
engine_rs/src/passes/mutate/: count_source.rs  mod.rs  s5f.rs  segment_rates.rs  uniform.rs  v_subregion_rates.rs
engine_rs/src/passes/mutate/s5f/: event.rs  execution.rs  sampling.rs
engine_rs/src/passes/mutation_transaction/: indel.rs  mod.rs  substitution.rs
engine_rs/src/python/: compiled.rs  contract.rs  event.rs  lineage.rs  mod.rs  outcome.rs  plan.rs  refdata.rs  region.rs  runner.rs  simulation.rs  trace.rs  trace_file.rs
engine_rs/src/refdata/: allele.rs  chain.rs  config.rs  id.rs  pool.rs  tests.rs  validation.rs
engine_rs/tests/: c10_recombination_integration.rs  d7_productive_only_integration.rs  e8_property_invariants.rs  metadata_truth_invariants.rs
engine_rs/tests/e8_property/: codon_rail.rs  common.rs  determinism.rs  distribution_support.rs  indel.rs  mod.rs  persistent.rs  productive.rs  regions.rs  trace.rs
engine_rs/tests/metadata_truth/: README.md  airr_projection.rs  common.rs  corruption_stack.rs  cross_segment.rs  indel_effects.rs  junction_anchor.rs  mod.rs  mutation_effects.rs  np_extension.rs  trim_ambiguity.rs
src/GenAIRR/_native/csrc/: CMakeLists.txt  Makefile
src/GenAIRR/_native/csrc/benchmarks/: bench_e2e.c  bench_e2e.py
src/GenAIRR/_native/csrc/data/: human_igh_imgt.c  human_igh_imgt.h
src/GenAIRR/_native/csrc/scripts/: export_dataconfig.py
src/GenAIRR/_native/csrc/tests/: test_airr.c  test_anchor.c  test_aseq.c  test_bitmap.c  test_codon_rail.c  test_corrections.c  test_functionality.c  (+9 more)
(+854 files in other folders)
