[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

# The simulation kernel ships separately as `genairr_engine` (built
# with maturin from `engine_rs/`). End-users typically install both
# wheels; in CI we build them in two passes.

[tool.cibuildwheel]
# Skip PyPy, 32-bit, and musl i686.
skip = "pp* *-musllinux_i686 *-win32"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
