# GenAIRR engine — Rust kernel for the simulation engine.
#
# Built as a Python extension via PyO3 + maturin, exposed to Python
# under the module name `genairr_engine`.

[package]
name = "genairr_engine"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-or-later"
description = "GenAIRR simulation engine (Rust kernel)"
publish = false

[lib]
# rlib for cargo unit tests; cdylib for the Python extension.
crate-type = ["cdylib", "rlib"]
name = "genairr_engine"

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }

[dev-dependencies]
# Reserved for proptest / property-based tests.
