# GenAIRR engine — Rust kernel for the simulation engine.
#
# Built as a Python extension via PyO3 + maturin, exposed to Python
# under the module name `genairr_engine`.

[package]
name = "genairr_engine"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-or-later"
description = "GenAIRR simulation engine (Rust kernel)"
publish = false

[lib]
# rlib for cargo unit tests; cdylib for the Python extension.
crate-type = ["cdylib", "rlib"]
name = "genairr_engine"

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
# Durable trace I/O. `serde` derives Serialize/Deserialize on the
# trace types; `serde_json` is the canonical on-disk format for
# `TraceFile` (the audit artifact).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Deterministic content hashing for the refdata signature inside
# `TraceFile`. SHA-256 is cryptographic strength — overkill for
# identity but the right tool when a hash mismatch is the only
# defense against silently replaying a trace against a drifted
# reference dataset.
sha2 = "0.10"

[dev-dependencies]
# Reserved for proptest / property-based tests.

[profile.release]
# Keep debug info so py-spy / perf / samply can symbolicate native
# stacks inside the .so. No effect on codegen / optimizations; adds a
# few MB to the .so size, fine for a Python extension. Explicit
# `strip = "none"` overrides any cargo default that might strip.
debug = true
strip = "none"
