# Maturin build configuration for the V6 engine Rust crate.
#
# This is intentionally a separate pyproject.toml from the repo-root one
# (which builds the Python package + V5 C extension via setuptools).
# We invoke maturin against this file directly: `maturin develop -m
# engine_rs/pyproject.toml`.

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "genairr_engine"
version = "0.0.1"
description = "GenAIRR V6 simulation engine (Rust kernel)"
requires-python = ">=3.9"

[tool.maturin]
# Crate is at this directory's root; binary lands as `genairr_engine`.
bindings = "pyo3"
features = ["pyo3/extension-module"]
strip = true
